cmake_minimum_required(VERSION 3.5)

set(SAVE_PARAM_SRC
    save_param_to_file.cpp
)

add_executable(save_param_to_file ${SAVE_PARAM_SRC})

###############################################################################
#### INCLUDES #################################################################
###############################################################################

###############################################################################
#### DEPENDENCIES #############################################################
###############################################################################

target_link_libraries(save_param_to_file
    PRIVATE gSDK
)

###############################################################################
#### INSTALL ##################################################################
###############################################################################

install(TARGETS
        save_param_to_file
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
